Nov 21, 2012 - chris ---------------------------------------------------
o Removed ham_env_create; renamed ham_env_create_ex to ham_env_create
o Removed ham_env_open; renamed ham_env_open_ex to ham_env_open
o Removed deprecated flags HAM_DISABLE_FREELIST_FLUSH, HAM_LOCK_EXCLUSIVE,
    HAM_IN_MEMORY_DB
o Refactored ham_get_parameters, ham_env_get_parameters and HAM_PARAM_*:
    - HAM_PARAM_GET_FLAGS -> renamed to HAM_PARAM_FLAGS
    - HAM_PARAM_GET_FILEMODE -> renamed to HAM_PARAM_FILEMODE
    - HAM_PARAM_GET_FILEMODE -> renamed to HAM_PARAM_FILEMODE
    - HAM_PARAM_MAX_ENV_DATABASES -> renamed to HAM_PARAM_MAX_DATABASES
    - HAM_PARAM_GET_KEYS_PER_PAGE -> renamed to HAM_PARAM_MAX_KEYS_PER_PAGE
    - Reduced list of options for ham_get_parameters; see hamsterdb.h
    - Removed HAM_PARAM_DBNAME
o Removed ham_get_flags; use ham_get_parameters instead
o Removed the HAM_DAM_* flags

Nov 20, 2012 - chris ---------------------------------------------------
o Removed ham_cursor_find_ex; renamed ham_cursor_find to ham_cursor_find_ex

Nov 19, 2012 - chris ---------------------------------------------------
o Removed ham_enable_encryption and the file filters; this function was
    not really used
o Removed ham_enable_compression and the record filters; this function was
    not really used
o Removed ham_get_keycount_per_page; the keycount can still be retrieved
    with ham_get_parameter(... HAM_PARAM_GET_KEYS_PER_PAGE...)
o Removed sorted duplicates; they anyway did not work in combination with
    Transactions. They will be fully implemented at a later stage.
o Removed ham_flush; use ham_env_flush instead
o Renamed HAM_WRITE_THROUGH to HAM_ENABLE_FSYNC

Nov 25, 2012 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.5

Nov 16, 2012 - chris ---------------------------------------------------
o Now linking against libtcmalloc_minimal if it's installed
