@@ -1,4 +1,5 @@
 Nov 21, 2012 - chris ---------------------------------------------------
+o Renamed HAM_DB_READ_ONLY to HAM_WRITE_PROTECTED
 o Removed ham_env_create; renamed ham_env_create_ex to ham_env_create
 o Removed ham_env_open; renamed ham_env_open_ex to ham_env_open
 o Removed deprecated flags HAM_DISABLE_FREELIST_FLUSH, HAM_LOCK_EXCLUSIVE,
